# NanoVM

./: AUTHORS  COPYING  ChangeLog  LICENSE  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  amigaos-crosscompile.sh  autogen-1.11.sh  autogen-1.14.sh  autogen-1.7.sh  automake-android.sh  automake-linux.sh  automake-rpi.sh  automake-windows.sh  config.h  config.h.in  configure  configure-android  configure.ac  create-protos.sh  egypt-callgraph.sh  gengraph.py  gengraph.py.1  nanovm-lib.graph  ncc-callgraph.sh
asmjit/: AUTHORS  CMakeLists.txt  Makefile  Makefile.am  Makefile.in  autogen.sh  automake-linux.sh  config.h  config.h.in  configure  configure.ac
asmjit/src/asmjit/: asmjit_build.h  build.h  config.h  host.h
assemb/: Makefile  Makefile.am  Makefile.in  ccl.c  jumpl.c  loadp.c  main.c  main_d.h  opcode.c  regname.c  saveend.c  saveo.c  stringf.c  var.c
comp/: Makefile  Makefile.am  Makefile.in  comp_opcode.h  compiler.c  emit.c  for.c  if.c  opcode.c  optimizer.c  parser.c  parser.h  protos.h  regspill.c  stringf.c  translate.c  var_comp.c
dll_shared_libs/: README  arr.c  dll.nanoc  libtest.c  make.sh  mutex.c  nanovmlib.c  nanovmlib.h
flow/: AUTHORS  AndroidAppSettings.cfg  ChangeLog  Makefile  Makefile.am  NEWS  README  autogen.sh  automake-windows.sh  config.h  config.h.in  configure  configure.ac  file.c  gadgets.c  global_d.h  loadscan.c  main.c  mem.c  raspberry-pi.c  rs232.c  rs232.h  socket.c  socket.h  sound.c
flow2/: Android.mk  AndroidAppSettings.cfg  ChangeLog  Makefile  Makefile.am  Makefile.in  README  apps.c  autogen.sh  config.h  config.h.in  configure  configure.ac  draw.c  gadgets.c  global_d.h  loadscan.c  main.c  mem.c  socket.c  socket.h  string.c
flow2/AndroidData/: nano-android-splash.scn  readme.txt
genann_shared_lib/: ann-xor-load.nanoc  ann-xor.nanoc  example1  example2  example3  example4  genann-lib.c  genann.c  genann.nch  make.sh  persist.txt  test
gpio_shared_lib/: gpio-main.c  gpio.nch  i2clib.nanoc  libgpio.nanoc  libgpiopwm.nanoc  make.sh
i2c_shared_lib/: i2c-main.c  make.sh
include/: Makefile  Makefile.am  Makefile.in  global_d.h  host.h  opcodes.h  protos.h
lib/: Makefile  Makefile.am  Makefile.in  checkd.c  endian.c  exe_time.c  file.c  mem.c  msg.c  vm.c
m4/: Makefile  Makefile.am  Makefile.in
nanovm/: README  README.txt  nano-android-splash.scn
nanovm/home/: CKNIGHT.gif.enc  cloudget.conf  npack.README  packetman.conf  startmenu.txt  webserver.cfg
nanovm/home/webroot/: 404.html  admin.html
nanovm/include/: array.nch  bytemove.nch  console.nch  conv.nch  endian.nch  error.nch  file.nah  file.nch  flow.nah  host.nah  host.nch  lang.nah  math.nah  math.nch  memory.nah  memory.nch  net.nah  newline.nch  process.nah  process.nch  socket.nah  socket.nch  sort-2.nch  sort.nch  string.nah  string.nch  threadpush.nch  threads.nah  threads.nch  types.nah  types.nch  vm.nah  vm.nch
nanovm/include/crypto/: ciphersaber.nch  ciphersaber_mem.nch  cryptx.nch
nanovm/include/datacube/: datacube.nch  replace.nch
nanovm/include/flow/: flow-master.nch
nanovm/include/geographical/: distance.nch  heading.nch
nanovm/include/net/: download.nch  receive-file.nch  send-file.nch
nanovm/include/tts/: svoxpico.nch
nanovm/prog/: README  benchm.nc  blaster-edit-2.nanoc  blaster-edit-2.no  blaster-edit-2.nr  ciphersaber.nc  cloudget.nc  cloudget.no  cloudget.nr  dyn-2.nc  for.nc  fractalix-2.5.nc  fractalix-2.5.no  fractalix-2.5.nr  fractalix-par-2.4-jit-experimental.na  fractalix-par-2.4-jit-experimental.nc  fractalix-par-2.4-jit-experimental.no  fractalix.nc  fractalix.no  hello-2.nc  hello.nc  hello_thread.nc  info2.nc  list-2.nc  list-4.nanoc  list.nc  make.nc  make.no  makedir.nc  multable_3.nc  npack.nanoc  npack.no  packetman.nc  packetman.no  packetman_README  password.nc  povcol_2.nc  rs232.nc  sort-test.nc  subfunc.nanoc  (+9 more)
nanovm/syntax-kate/: Nano-N.xml  README.txt
opencv_shared_libs/face-detect/: facedet.na  facedet.nanoc  facedet.no  facedet_video.cpp  libopencvfacedet.so.1.0  make.sh
opencv_shared_libs/robotvision/: make.sh  robotvision.cpp  robotvision.nanoc
po/: Makefile  Makefile.in
rs232_shared_lib/: main.c  make.sh  rs232lib.nanoc  rs232lib.no  rs232lib.nr
sdl_shared_lib/: make.sh  sdl-main.c
statifier/: COPYING  README  statifier.py
vm/: Makefile  Makefile.am  Makefile.in  arch.h  dlload.c  dynamic_array.c  exe_arr.c  exe_file.c  exe_main.c  exe_passw_input.c  exe_pointer.c  exe_process.c  exe_socket.c  exe_socket_ipv4_amiga.h  exe_socket_ipv6.h  exe_stack.c  exe_vector_arr.c  fnv.h  hash32.c  hash_64a.c  hyperspace_client.c  hyperspace_server.c  jit.cpp  jit_x86.h  main.c  main_d.h  openend.c  openo.c  pthread.c  register.c  rights.c  rinzler.c  rs232.c  rs232.h  snprintf.c  stringf.c  strtoll.c  verifyo.c
